--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,3 +4,11 @@ on:
    branches: [ main ]
  pull_request:
    branches: [ main ]
+   
+jobs: 
+  build:
+    runs-on: ubuntu-latest      
+    steps:
+    - uses: actions/checkout@v2
+    - name: HTML5Validator
+      uses: Cyb3r-Jak3/html5validator-action@v7.1.1
