--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,3 +12,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: HTML5Validator
       uses: Cyb3r-Jak3/html5validator-action@v7.1.1
+      
+      with:
+        root: cse110-fa22-group28
+        format: text
+        blacklist: invalid
+        continue-on-error: true
