--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,10 @@ jobs:
       continue-on-error: true
         
     - name: Rename and Move
+      if: failure() && github.event_name == 'push'
       run: mv log.log HTML_Logs.txt; mv HTML_Logs.txt logStorage
       
     - uses: EndBug/add-and-commit@v9.1.1
+      if: failure() && github.event_name == 'push'
       with: 
         add: logStorage/HTML_Logs.txt
