--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       if: always()
       run: | 
         if [ 1==2 ]; then 
-            mkdir logStorage; mv log.log HTML_Logs.txt; mv HTML_Logs.txt logStorage
+            mkdir logStorage; mv log.log HTML_Logs.txt; mv HTML_Logs.txt logStorage;
       
     - uses: EndBug/add-and-commit@v9.1.1
       if: always()
