--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Rename and Move
       if: always()
       run: | 
-        if [ 1==2 ]; then 
+        if [ -d logStorage ]; then 
             mkdir logStorage; mv log.log HTML_Logs.txt; mv HTML_Logs.txt logStorage;
       
     - uses: EndBug/add-and-commit@v9.1.1
