--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on:
  push:
    branches: [ CI_HTML_Valdation ]
  pull_request:
-   branches: [ main ]
+   branches: [ CI_HTML_Valdation ]
   
 jobs: 
   build:
