--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,5 @@ jobs:
          VALIDATE_HTML: true
          OUTPUT_LOG: Reports 
          OUTPUT_DETAILS: detailed
-         VALIDATE_ALL_CODEBASE: true
+         VALIDATE_ALL_CODEBASE: false
          
