--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,7 @@ jobs:
         
        env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-         VALIDATE_HTML: true
          OUTPUT_LOG: Reports 
          DEFAULT_BRANCH: CI_MD-CSS-JS
          OUTPUT_DETAILS: detailed
-         VALIDATE_ALL_CODEBASE: false
-         
+         VALIDATE_ALL_CODEBASE: true
