--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,7 @@ jobs:
           DEFAULT_BRANCH: CI_MD-CSS-JS
           OUTPUT_DETAILS: detailed
           VALIDATE_ALL_CODEBASE: true
+          LOG_FILE: super-linter.txt 
       
       - name: Rename and Move
         if: always()
