--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,10 @@ name: Lint Code Base
 #############################
 on:
   push:
-    branches: [ CI_MD-CSS-JS ]
+    branches: [ dev ]
     # Remove the line above to run when pushing to master
   pull_request:
-    branches: [ CI_MD-CSS-JS ]
+    branches: [ dev ]
 
 ###############
 # Set the Job #
