--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,15 +46,19 @@ jobs:
           VALIDATE_HTML: true;
           VALIDATE_MARKDOWN: true;
           VALIDATE_NATURAL_LANUGAGE: true;
-      
-      - name: Rename and Move
+      #########################################
+      # Moves file outputted by Linter to LOG #
+      #########################################
+      - name: Move
         if: always()
         run: | 
          if [ ! -d LOG ]; then 
           mkdir LOG;
          fi
          mv super-linter.log LOG; 
-      
+      ####################################
+      # Update repo with LOG file update #
+      ####################################      
       - uses: EndBug/add-and-commit@v9.1.1
         if: always()
         with: 
