--- a/.github/workflows/autoTesting.yml
+++ b/.github/workflows/autoTesting.yml
@@ -11,8 +11,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12'
-      - run: npm install yarn
       - run: yarn install
+      - run: yarn test:ci
 
       - name: Tests ✅
         if: ${{ success() }}
