--- a/.github/workflows/autoTesting.yml
+++ b/.github/workflows/autoTesting.yml
@@ -13,6 +13,7 @@ jobs:
           node-version: '16'
       - run: yarn install
       - run: yarn test:ci
+      - run: npm test
 
       - name: Tests ✅
         if: ${{ success() }}
