--- a/.github/workflows/autoTesting.yml
+++ b/.github/workflows/autoTesting.yml
@@ -13,7 +13,7 @@ jobs:
           node-version: '16'
       - run: yarn install
       - run: yarn test:ci
-      - run: npm test
+      - run: npm run test:ci
 
       - name: Tests ✅
         if: ${{ success() }}
