--- a/.github/workflows/autoTesting.yml
+++ b/.github/workflows/autoTesting.yml
@@ -12,8 +12,7 @@ jobs:
         with:
           node-version: '16'
       - run: yarn install
-      - run: yarn test:ci
-      - run: npm run test:ci
+      - run: npm test
 
       - name: Tests ✅
         if: ${{ success() }}
