--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "jest"
-    "test:ci":"jest --ci --runInBand --reporters=default --reporters=jest-junit"
+    “test:ci”:“jest --ci --runInBand --reporters=default --reporters=jest-junit”
   },
   "jest": {
     "preset": "jest",
