--- a/.github/workflows/autoTesting.yml
+++ b/.github/workflows/autoTesting.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           node-version: '16'
       - run: yarn install
-             npm run test:ci
+      - run: yarn test:ci
 
       - name: Tests ✅
         if: ${{ success() }}
