--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "devDependencies": {
-    "@babel/core": "^7.20.5",
+    "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "babel-jest": "^29.3.1",
     "jest": "^29.3.1",
     "jest-puppeteer": "^6.1.1",
-    "puppeteer": "^19.3.0"
+    "puppeteer": "^19.2.2"
   },
   "scripts": {
     "test": "jest"
   },
   "jest": {
-    "preset": "jest",
+    "preset": "jest-puppeteer",
     "verbose": true
   }
-  
 }
