--- a/.github/workflows/autoTesting.yml
+++ b/.github/workflows/autoTesting.yml
@@ -11,8 +11,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '16'
-      - run: yarn install
-      - run: yarn test:ci
+      - run: npm install
+      - run: npm test
 
       - name: Tests ✅
         if: ${{ success() }}
