--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -43,6 +43,7 @@ jobs:
         VALIDATE_ALL_CODEBASE: true
         VALIDATE_CSS: true;
         VALIDATE_HTML: true;
+        VALIDATE_JAVASCRIPT_STANDARD: true;
         VALIDATE_MARKDOWN: true;
         VALIDATE_NATURAL_LANUGAGE: true;
     #########################################
