--- a/.github/workflows/autoTesting.yml
+++ b/.github/workflows/autoTesting.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - name: Test using Node.js
