--- a/.github/workflows/autoTesting.yml
+++ b/.github/workflows/autoTesting.yml
@@ -19,24 +19,24 @@ jobs:
         run: |
           curl --request POST `
           --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} `
-          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' `
-          --header 'content-type: application/json' `
-          --data '{
-            "context": "tests",
-            "state": "success",
-            "description": "Tests passed",
-            "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-          }'
+          --header "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" `
+          --header "content-type: application/json" `
+          --data "{
+            \"context\": \"tests\",
+            \"state\": \"success\",
+            \"description\": \"Tests passed\",
+            \"target_url\": \"https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}\"
+          }"
       - name: Tests 🚨
         if: ${{ failure() }}
         run: |
           curl --request POST `
           --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} `
-          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' `
-          --header 'content-type: application/json' `
-          --data '{
-            "context": "tests",
-            "state": "failure",
-            "description": "Tests failed",
-            "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-          }'
+          --header "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" `
+          --header "content-type: application/json" `
+          --data "{
+            \"context\": \"tests\",
+            \"state\": \"failure\",
+            \"description\": \"Tests failed\",
+            \"target_url\": \"https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}\"
+          }"
