--- a/.github/workflows/autoTesting.yml
+++ b/.github/workflows/autoTesting.yml
@@ -16,16 +16,18 @@ jobs:
 
       - name: Tests ✅
         if: ${{ success() }}
+        run: data="{`
+            `"context`": `"tests`",`
+            `"state`": `"success`",`
+            `"description`": `"Tests passed`",`
+            `"target_url`": `"https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}`"
+            }"
         run: |
           curl --request POST `
           --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} `
           --header "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" `
           --header "content-type: application/json" `
-          --data "{`
-            `"context`": `"tests`",`
-            `"state`": `"success`",`
-            `"description`": `"Tests passed`",`
-            `"target_url`": `"https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}`"}"
+          --data ${{ data }}
       - name: Tests 🚨
         if: ${{ failure() }}
         run: |
