--- a/.github/workflows/autoTesting.yml
+++ b/.github/workflows/autoTesting.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '16'
-      - run: npm install
+      #- run: npm install
       #- run: npm test
 
       - name: Tests ✅
@@ -21,7 +21,7 @@ jobs:
           --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} `
           --header "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" `
           --header "content-type: application/json" `
-          --data "{`"context`": `"tests`",`"state`": `"success`",`"description`": `"Tests passed`",`"target_url`": `"https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}`"}"
+          --data "{`"context`": `"tests`",`"state`": `"success`",`"description`": `"Tests passed`",`"target_url`": `"https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}`""
       - name: Tests 🚨
         if: ${{ failure() }}
         run: |
