try to fix curl 7

--- a/.github/workflows/autoTesting.yml
+++ b/.github/workflows/autoTesting.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   test:
-    runs-on: windows-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - name: Test using Node.js
@@ -17,21 +17,26 @@ jobs:
       - name: Tests ✅
         if: ${{ success() }}
         run: |
-          curl --request POST `
-          --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} `
-          --header "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" `
-          --header "content-type: application/json" `
-          --data "{`"context`": `"tests`",`"state`": `"success`",`"description`": `"Tests passed`",`"target_url`": `"https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}`""
+          curl --request POST \
+          --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} \
+          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+          --header 'content-type: application/json' \
+          --data '{
+            "context": "tests",
+            "state": "success",
+            "description": "Tests passed",
+            "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          }'
       - name: Tests 🚨
         if: ${{ failure() }}
         run: |
-          curl --request POST `
-          --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} `
-          --header "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" `
-          --header "content-type: application/json" `
-          --data "{`
-            `"context`": `"tests`",`
-            `"state`": `"failure`",`
-            `"description`": `"Tests failed`",`
-            `"target_url`": `"https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}`"`
-          }"
+          curl --request POST \
+          --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} \
+          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+          --header 'content-type: application/json' \
+          --data '{
+            "context": "tests",
+            "state": "failure",
+            "description": "Tests failed",
+            "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          }'
