--- a/.github/workflows/autoTesting.yml
+++ b/.github/workflows/autoTesting.yml
@@ -11,8 +11,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '16'
-      #- run: npm install
-      #- run: npm test
+      - run: npm install
+      - run: npm test
 
       - name: Tests ✅
         if: ${{ success() }}
