--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "jest-puppeteer": "^6.1.1",
+    "live-server": "^1.2.2",
     "puppeteer": "^19.3.0"
   },
   "scripts": {
