--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -59,7 +59,7 @@ jobs:
     # Update repo with LOG file update #
     ####################################      
     - uses: EndBug/add-and-commit@v9.1.1
-      if: always()
+      if: github.event_name == 'push'
       with: 
        add: LOG/super-linter.log
-       push: origin HEAD:${{ github.head_ref }}
+
