--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -59,9 +59,9 @@ jobs:
     # Update repo with LOG file update #
     ####################################    
     - name: add
-      if: github.event_name == 'push'
       run: |
-       git add LOG
-       git commit
+       git config --global user.name 'Your Name'
+       git config --global user.email 'your-username@users.noreply.github.com'
+       git commit -am "Automated report"
        git push
 
