--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -63,5 +63,5 @@ jobs:
        git config --global user.name 'Your Name'
        git config --global user.email 'your-username@users.noreply.github.com'
        git commit -am "Automated report"
-       git push
+       git push: origin HEAD:${{ github.head_ref }}
 
