--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "jest": {
     "preset": "jest-puppeteer",
-    "verbose": true
+    "verbose": true,
+    "collectCoverage": true,
+    "collectCoverageFrom": ["./source/**"]
   }
 }
